@@ -41,6 +41,8 @@ int tty_fix(void);
 
 void compress_terminal_line_length (char *out_buf, const size_t keep_from_beginning, const size_t keep_from_end);
 
+void hash_info                          (hashcat_ctx_t *hashcat_ctx);
+
 void example_hashes                     (hashcat_ctx_t *hashcat_ctx);
 
 void backend_info                       (hashcat_ctx_t *hashcat_ctx);
