@@ -40,6 +40,7 @@ int induct_ctx_init (hashcat_ctx_t *hashcat_ctx)
   induct_ctx->enabled = false;
 
   if (user_options->benchmark      == true) return 0;
+  if (user_options->hash_info      == true) return 0;
   if (user_options->example_hashes == true) return 0;
   if (user_options->keyspace       == true) return 0;
   if (user_options->left           == true) return 0;
