@@ -333,7 +333,7 @@ int hashconfig_init (hashcat_ctx_t *hashcat_ctx)
 
     hashconfig->has_optimized_kernel = hc_path_read (source_file);
 
-    if (user_options->example_hashes == false)
+    if (user_options->example_hashes == false && user_options->hash_info == false)
     {
       if (user_options->optimized_kernel_enable == true)
       {
